// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArtistArea snapshots should match the correct snapshot 1`] = `
<div>
  <FavoritesInstructions />
</div>
`;

exports[`ArtistArea snapshots should match the correct snapshot 2`] = `
<div>
  <FavoritesInstructions />
</div>
`;

exports[`ArtistArea snapshots should match the correct snapshot 3`] = `
<div>
  <FavoritesInstructions />
</div>
`;

exports[`ArtistArea snapshots should match the correct snapshot 4`] = `
<div>
  <FavoritesInstructions />
</div>
`;

exports[`ArtistArea snapshots should match the correct snapshot 5`] = `
<div>
  <Connect(Card)
    artist="1234"
    key="a008f5"
  />
</div>
`;
